Переработаны стили, в основном цвета.Добавлена новая страница категорий